--- a/src/style.css
+++ b/src/style.css
@@ -5,5 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 body {
     font-family: 'Ubuntu', sans-serif; /* Utiliza el nombre de la fuente específico proporcionado por Google Fonts */
+    height: 100vh;
+    background-color: black;
   }
   
